# immich-sync

./: .gitignore  Cargo.toml  README.md  mktable.sh
immich-api/: immich-openapi-specs.json
immich-open-api/: Cargo.toml  README.md
immich-open-api/.openapi-generator/: FILES
immich-open-api/docs/: AssetResponseDto.md  ClipConfig.md  DuplicateDetectionConfig.md  ServerStorageResponseDto.md
immich-open-api/src/apis/: activities_api.rs  albums_api.rs  api_keys_api.rs  assets_api.rs  audit_api.rs  authentication_api.rs  configuration.rs  download_api.rs  duplicates_api.rs  faces_api.rs  file_reports_api.rs  jobs_api.rs  libraries_api.rs  map_api.rs  memories_api.rs  notifications_api.rs  o_auth_api.rs  partners_api.rs  people_api.rs  search_api.rs  server_info_api.rs  sessions_api.rs  shared_links_api.rs  sync_api.rs  system_config_api.rs  system_metadata_api.rs  tags_api.rs  timeline_api.rs  trash_api.rs  users_admin_api.rs  users_api.rs
immich-open-api/src/models/: activity_create_dto.rs  activity_response_dto.rs  activity_statistics_response_dto.rs  add_users_dto.rs  admin_onboarding_update_dto.rs  album_count_response_dto.rs  album_response_dto.rs  album_user_add_dto.rs  album_user_create_dto.rs  album_user_response_dto.rs  album_user_role.rs  all_job_status_response_dto.rs  api_key_create_dto.rs  api_key_create_response_dto.rs  api_key_response_dto.rs  api_key_update_dto.rs  asset_bulk_delete_dto.rs  asset_bulk_update_dto.rs  asset_bulk_upload_check_dto.rs  asset_bulk_upload_check_item.rs  asset_bulk_upload_check_response_dto.rs  asset_bulk_upload_check_result.rs  asset_delta_sync_dto.rs  asset_delta_sync_response_dto.rs  asset_face_response_dto.rs  asset_face_update_dto.rs  asset_face_update_item.rs  asset_face_without_person_response_dto.rs  asset_full_sync_dto.rs  asset_ids_dto.rs  asset_ids_response_dto.rs  asset_job_name.rs  asset_jobs_dto.rs  asset_media_response_dto.rs  asset_media_size.rs  asset_media_status.rs  asset_order.rs  asset_response_dto.rs  asset_stats_response_dto.rs  asset_type_enum.rs  (+154 more)
photos-api/: .gitignore  openapi-spec.json
src/: coalescing_worker.rs  copier.rs  db_schema.sql  get_auth.rs  gpclient.rs  immich_client.rs  lib.rs  main.rs  match_metadata.rs
src/get-auth/: main.rs
src/link/: db_schema.sql  main.rs
