[package]
name = "immich-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "get-auth"
path = "src/get-auth/main.rs"

[[bin]]
name = "link"
path = "src/link/main.rs"

[dependencies]
dotenvy = "0.15.7"
immich-api = {path = "immich-api/generated"}
gphotos-api = {path = "photos-api/generated"}
tokio = { version = "1", features = ["full"] }
oauth2 = "5.0.0-alpha.4"
anyhow = "1.0.86"
url = "2.5.2"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "0.12.5"
futures = "0.3.30"
pin-project = "1.1.5"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
futures-core = "0.3.30"
clap = { version = "4.5.7", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
rust-crypto = "0.2.36"
unicode-normalization = "0.1.23"
chrono = "0.4.38"
colored = "2.1.0"
uuid = "1.9.1"
bytes = "1.6.0"
